finishd crud api operation